--- a/modules/Platform-ObjectManager-CardManager/pages/CardManager.GetCardData_1_MT.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CardManager.GetCardData_1_MT.adoc
@@ -30,4 +30,4 @@ refresh:::
 
 == Заметки
 
-Параметр `refresh` не влияет на обновление данных карточки при наличии незавершенных обновления. В этом случае рекомендуется выполнить принудительное обновление -- вызвать метод `CardData.Refresh`.
+Параметр `refresh` не влияет на обновление данных карточки при наличии незавершённых обновления. В этом случае рекомендуется выполнить принудительное обновление -- вызвать метод `CardData.Refresh`.
