--- a/modules/Platform-ObjectManager-SearchModel/pages/SearchQuery_CL.adoc
+++ b/modules/Platform-ObjectManager-SearchModel/pages/SearchQuery_CL.adoc
@@ -26,7 +26,7 @@ public abstract class SearchQuery
 |`IncludeDeleted` |Возвращает или задаёт требование включения в область поиска удаленных карточек.
 |`IncludeLinkedCards` |Возвращает или задаёт требование включения в область поиска карточки связанные с найденными ссылкой.
 |`IncludeTopicCards` |Позволяет включить в результаты поиска карточки, принадлежащие к одной теме обработки с найденными.
-|`Limit` |Возвращает или задаёт максимальное количество карточек включенных в результат поиска.
+|`Limit` |Возвращает или задаёт максимальное количество карточек включённых в результат поиска.
 |`LinkDirections` |Возвращает или задаёт направление ссылок при истинности значения `IncludeLinkedCards`.
 |`LinkTypes` |Возвращает или задаёт тип ссылок при истинности значения `IncludeLinkedCards`.
 |`Parameters` |Коллекция параметров атрибутивного поиска.
