--- a/modules/Workflow/pages/Objects/ProcessStateEnum_EN.adoc
+++ b/modules/Workflow/pages/Objects/ProcessStateEnum_EN.adoc
@@ -21,5 +21,5 @@ public enum ProcessStateEnum
 |`Active` |Активен.
 |`Paused` |Приостановлен.
 |`Failed` |Приостановлен из-за ошибки.
-|`Finished` |Завершен успешно.
+|`Finished` |Завершён успешно.
 |===
