--- a/modules/Workflow/pages/Objects/Process_CL.adoc
+++ b/modules/Workflow/pages/Objects/Process_CL.adoc
@@ -40,7 +40,7 @@ public class Process : ProcessWrapper
 |`LockStatus` |Возвращает статус блокировки карточки.
 |`Name` |Задаёт или возвращает название БП.
 |`Priority` |Задаёт или возвращает приоритет БП.
-|`SimpleMode` |Задаёт или возвращает признак того, что включен простой режим отображения панели инструментов СУБП.
+|`SimpleMode` |Задаёт или возвращает признак того, что включён простой режим отображения панели инструментов СУБП.
 |`State` |Задаёт или возвращает состояние экземпляра процесса.
 |`Topic` |Задаёт или возвращает тему карточки.
 |`TopicId` |Возвращает идентификатор темы карточки.
