--- a/modules/appendix/pages/user-session-properties.adoc
+++ b/modules/appendix/pages/user-session-properties.adoc
@@ -33,7 +33,7 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`ComputerName` |Имя клиентского компьютера.
 |`ConnectAddress` |Адрес сервера {dv}, к которому выполнено подключение.
 |`CurrentUserID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
-|`CustomOperationsTimeout` |Время отклика сервера для сложной операции. Проверяется при включенном контроле сети.
+|`CustomOperationsTimeout` |Время отклика сервера для сложной операции. Проверяется при включённом контроле сети.
 |`DatabaseType` |Тип базы данных: `0` -- Microsoft SQL; `1` -- PostgreSQL.
 |`EmployeeID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
 |`ExpirationDate` |Дата окончания срока действия лицензии для {dv} 5.
@@ -60,7 +60,7 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`ServerTime` |Текущее время на сервере {dv}.
 |`ServerUrl` |URL к корню WEB-сервера.
 |`ServerVersion` |Версия сервера {dv}. Определяется по версии сборки `DocsVision.StorageServer.dll`.
-|`SimpleOperationsTimeout` |Время отклика сервера для стандартной операции. Проверяется при включенном контроле сети.
+|`SimpleOperationsTimeout` |Время отклика сервера для стандартной операции. Проверяется при включённом контроле сети.
 |`Timeout` |Величина максимального времени (в мс) ожидания ответа сервера {dv} при установке соединения или выполнении операций.
 |`UpdateLimit` |Дата окончания срока, после которого возможность обновление сервера становится невозможным.
 |`UserID` |Идентификатор текущего пользователя.
