--- a/modules/bpms/pages/scenario-debug.adoc
+++ b/modules/bpms/pages/scenario-debug.adoc
@@ -22,12 +22,12 @@
 
 _Сценарии_ могут использовать для организации корректной работы стандартный механизм исключений. Исключения могут возникать в результате ошибок исполнения _сценария_, либо принудительно вызываться в коде для выполнения необходимых действий. Все возможные исключения _сценарий_ должен обрабатывать самостоятельно и в зависимости от этого реализовывать тот или иной вариант работы (например, записать информацию об исключении в журнал или выполнить другой участок кода).
 
-Если исключение не было обработано в _сценарии_, то оно обрабатывается сервисом _СУБП_, и _сценарий_ считается завершенным с непредвиденной ошибкой. Обработка процесса в этом случае прерывается на _функцию_, вызвавшей исключение.
+Если исключение не было обработано в _сценарии_, то оно обрабатывается сервисом _СУБП_, и _сценарий_ считается завершённым с непредвиденной ошибкой. Обработка процесса в этом случае прерывается на _функцию_, вызвавшей исключение.
 
-.Сценарий считается завершенным успешно (исполнение процесса продолжается), если:
+.Сценарий считается завершённым успешно (исполнение процесса продолжается), если:
 * Компиляция сценария завершена без ошибок.
 * Все возникшие во время исполнения исключения обработаны самим сценарием.
 
-.Сценарий считается завершенным с ошибкой (исполнение бизнес-процесса прерывается), если:
+.Сценарий считается завершённым с ошибкой (исполнение бизнес-процесса прерывается), если:
 * Возникла одна или более ошибок при компиляции кода сценария (синтаксические, семантические ошибки или не удалось подключить дополнительные библиотеки).
 * Были необработанные исключения.
