--- a/modules/bpms/pages/scenario-save.adoc
+++ b/modules/bpms/pages/scenario-save.adoc
@@ -112,7 +112,7 @@ internal sealed class ResNameAttribute : DescriptionAttribute
 }
 ----
 
-Данный класс может быть включен в сборку с получаемым _сценарием_, либо вынесен в отдельную библиотеку.
+Данный класс может быть включён в сборку с получаемым _сценарием_, либо вынесен в отдельную библиотеку.
 
 После получения библиотеки с локализованными названиями, окно настройки "Универсальной функции" будет как показано ниже.
 
