--- a/modules/cards/pages/folder-shortcut.adoc
+++ b/modules/cards/pages/folder-shortcut.adoc
@@ -44,12 +44,12 @@ FolderCard folderCard = (FolderCard)userSession.CardManager.GetDictionary(new Gu
 
 При создании карточки папки надо учитывать, что, когда пользователь открывает папку, она отображается не модально и скрывается, как только пользователь переходит на другую папку. У карточки нет возможности отменить закрытие (ей не приходит вызов `xref:Platform-WinForms:CardControl.CardClosing_EV.adoc[CardControl.CardClosing]`), поэтому в её интерфейсе не должно быть средств редактирования чего-либо, что может остаться несохранённым к моменту перехода на другую папку. Лучше всего использовать интерфейс карточки для отображения чего-либо, а всё редактирование вынести на отдельные формы, по закрытии которых будет производиться сохранение данных.
 
-В примере проверяется наличие у папки подпапки с названием "Завершенные". Если папка с заданным именем отсутствует, она будет создана.
+В примере проверяется наличие у папки подпапки с названием "завершённые". Если папка с заданным именем отсутствует, она будет создана.
 
 [source,csharp]
 ----
 Folder folder = folderCard.GetFolder(new Guid("00000000-0000-0000-0000-000000000000"));
-string folderName = "Завершенные"; <.>
+string folderName = "завершённые"; <.>
 
 if (!folder.HasSubfolders || folder.Folders.Count(m=>m.Name.Equals(folderName)) = 0)
 {
@@ -57,7 +57,7 @@ if (!folder.HasSubfolders || folder.Folders.Count(m=>m.Name.Equals(folderName)) 
 }
 ----
 <.> Получение папки с идентификатором `00000000-0000-0000-0000-000000000000`.
-<.> Если папка не имеет подпапок, либо не содержит подпапки с именем "Завершенные", такая папка будет создана.
+<.> Если папка не имеет подпапок, либо не содержит подпапки с именем "завершённые", такая папка будет создана.
 
 == Ярлык
 
