--- a/modules/samples/pages/object-model/change-card-state.adoc
+++ b/modules/samples/pages/object-model/change-card-state.adoc
@@ -1,6 +1,6 @@
 = Изменение состояния карточки
 
-.Пример кода, переводящего карточку группового задания в завершенное состояние:
+.Пример кода, переводящего карточку группового задания в завершённое состояние:
 [source,csharp]
 ----
 ObjectContext context = this.LocalContext; <.>
