--- a/modules/schemas/pages/release/Core/Navigator.adoc
+++ b/modules/schemas/pages/release/Core/Navigator.adoc
@@ -129,7 +129,7 @@
 |`ColumnName` |Колонка для сортировки |`unistring` |32 |
 |`Order` |Порядок применения |`int` | |
 |`Ascending` |Порядок сортировки |`bool` | |
-|`Active` |Сортировка включен |`bool` | |
+|`Active` |Сортировка включена |`bool` | |
 |===
 
 === Секция "Группировки"
