--- a/modules/schemas/pages/release/Workflow/Monitor.adoc
+++ b/modules/schemas/pages/release/Workflow/Monitor.adoc
@@ -21,7 +21,7 @@
 |`ServiceUrl` |URL сервера |`string` | |
 |`ShowActive` |Показывать активные |`bool` | |
 |`ShowPaused` |Показывать приостановленные |`bool` | |
-|`ShowFinished` |Показывать завершенные успешно |`bool` | |
+|`ShowFinished` |Показывать завершённые успешно |`bool` | |
 |`ShowStopped` |Показывать остановленные |`bool` | |
 |`ShowFailed` |Показывать приостановленные по ошибке |`bool` | |
 |===
