--- a/modules/schemas/pages/release/Workflow/Process.adoc
+++ b/modules/schemas/pages/release/Workflow/Process.adoc
@@ -24,7 +24,7 @@
 * Активен = 1.
 * Приостановлен = 2.
 * Приостановлен из-за ошибки = 3.
-* Завершен успешно = 4.
+* Завершён успешно = 4.
 |`HasLayout` |Граф нарисован |`bool` | |
 |`DateBegin` |Дата начала |`datetime` | |
 |`DateEnd` |Дата окончания |`datetime` | |
