--- a/modules/solutions/pages/cards/scheme/card-description.adoc
+++ b/modules/solutions/pages/cards/scheme/card-description.adoc
@@ -46,7 +46,7 @@ image::ROOT:card-general-info.png[Общая информация карточк
 +
 ** _Provides UI Extension_ -- атрибут для карточек, которые интегрируются с интерфейсом {wincl}а для реализации прикладных функций.
 ** _High changes rate_ -- атрибут следует устанавливать у тех карточек, изменение данных в которых происходит с экстремально большой частотой (например, он установлен у системной карточки папок). При установленном флаге `timestamp` данной карточки не обновляется при изменении, а вычисляется по набору timestamp’ов секций данной карточки.
-** _Use server extension when checking access to the card_ -- атрибут по умолчанию включен для карточек документов и заданий. Если флаг снят, ролевая модель при проверке прав на карточки не используется.
+** _Use server extension when checking access to the card_ -- атрибут по умолчанию включён для карточек документов и заданий. Если флаг снят, ролевая модель при проверке прав на карточки не используется.
 ** _Client-side data caching on disk is restricted_ -- атрибут позволяет запретить кэширование клиентских данных на диск. По умолчанию эта функция отключена.
 * _Default security descriptor_ -- дескриптор безопасности, который определяет набор, назначаемых прав по умолчанию при создании экземпляров карточки.
 +
