--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/TaskStopExecutionInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/TaskStopExecutionInfo_CL.adoc
@@ -27,7 +27,7 @@ public class TaskStopExecutionInfo
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`CompletedTasks` |Задаёт или возвращает информацию по завершенным заданиям.
+|`CompletedTasks` |Задаёт или возвращает информацию по завершённым заданиям.
 |`ErrorInfo` |Задаёт или возвращает содержимое ошибки остановки завершения задания.
 |`LockedTasks` |Задаёт или возвращает информацию по заблокированным заданиям.
 |===
