--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.AddEmployeeToGroup_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.AddEmployeeToGroup_MT.adoc
@@ -26,7 +26,7 @@ employee:::
 Возвращаемое значение::
 Тип: `xref:BackOffice-ObjectModel-Staff:StaffGroupItem_CL.adoc[StaffGroupItem]`
 +
-Сотрудник, включенный в группу
+Сотрудник, включённый в группу
 
 == Исключения
 
