--- a/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.InitializeSystemInfo_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.InitializeSystemInfo_MT.adoc
@@ -28,7 +28,7 @@ cardKind:::
 [cols=",",options="header"]
 |===
 |Исключение |Условие
-|`http://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка возникает в случае невозможности получения вида карточки -- не определен `baseCard.SystemInfo.CardKind` и не задан `cardKind`. Может также возникнуть, если в справочнике состояний не указано начальное состояние вида карточки.
+|`http://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка возникает в случае невозможности получения вида карточки -- не определён `baseCard.SystemInfo.CardKind` и не задан `cardKind`. Может также возникнуть, если в справочнике состояний не указано начальное состояние вида карточки.
 |===
 
 == Заметки
