--- a/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.StartBusinessProcess_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.StartBusinessProcess_MT.adoc
@@ -39,7 +39,7 @@ kindsCardProcess:::
 
 == Заметки
 
-Если текущий сотрудник не определен, то бизнес-процесс будет создан, но не будет запущен. Запуск БП может быть отменен по результатам обработки события `IBaseCardService.BeforeBusinessProcessStart`, но только в случае запуска процесса из сервиса `IBaseCardService`.
+Если текущий сотрудник не определён, то бизнес-процесс будет создан, но не будет запущен. Запуск БП может быть отменен по результатам обработки события `IBaseCardService.BeforeBusinessProcessStart`, но только в случае запуска процесса из сервиса `IBaseCardService`.
 
 == Примеры
 
