--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CheckActualSignature_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CheckActualSignature_MT.adoc
@@ -21,7 +21,7 @@ document:::
 fields:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/92t2ye13.aspx[System.Collections.Generic.ICollection]<CardFieldSetting>`
 +
-Коллекция полей типа `xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CardFieldSetting_CL.adoc[CardFieldSetting]`, у которых должна быть проверена подпись. Список полей определен в Справочнике видов карточек
+Коллекция полей типа `xref:BackOffice-ObjectModel-Services-Entities:Entities/KindSetting/CardFieldSetting_CL.adoc[CardFieldSetting]`, у которых должна быть проверена подпись. Список полей определён в Справочнике видов карточек
 
 signature:::
 Тип: `xref:BackOffice-ObjectModel-BaseCard:BaseCardSignature_CL.adoc[BaseCardSignature]`
