--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.LockMainFile_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.LockMainFile_MT.adoc
@@ -34,5 +34,5 @@ path:::
 |===
 |Исключение |Условие
 |`http://msdn.microsoft.com/ru-ru/library/system.argumentnullexception.aspx[System.ArgumentNullException]` |Ошибка возвращается в случае, если не задан параметр `document` или `file`.
-|`http://msdn.microsoft.com/ru-ru/library/system.methodaccessexception.aspx[System.MethodAccessException]` |Ошибка возвращается в случае, если путь path не определен.
+|`http://msdn.microsoft.com/ru-ru/library/system.methodaccessexception.aspx[System.MethodAccessException]` |Ошибка возвращается в случае, если путь path не определён.
 |===
