--- a/modules/BackOffice-ObjectModel-Services-ILockService/pages/ILogService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ILockService/pages/ILogService_IN.adoc
@@ -50,7 +50,7 @@ Document document = objectContext.GetObject<Document>(new Guid("00000000-0000-00
 
 ILogService logService = objectContext.GetService<ILogService>(); <.>
 
-logService.AddLogMessage(document, Document.EditOperation, "Документ был изменен из кода."); <.>
+logService.AddLogMessage(document, Document.EditOperation, "Документ был изменён из кода."); <.>
 
 logService.CommitLog(); <.>
 ----
