--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.GetTaskRejectionMailNotificationInfo_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.GetTaskRejectionMailNotificationInfo_MT.adoc
@@ -33,6 +33,6 @@ taskCardUrl:::
 [cols=",",options="header"]
 |===
 |Исключение |Условие
-|`http://msdn.microsoft.com/ru-ru/library/system.argumentnullexception.aspx[System.ArgumentNullException]` |Ошибка возвращается в случае, если не задан параметр `task` или `taskCardUrl`. Также ошибка может быть возвращена, если не определен автор, либо его почтовый адрес, или сотрудник, отклонивший задание.
+|`http://msdn.microsoft.com/ru-ru/library/system.argumentnullexception.aspx[System.ArgumentNullException]` |Ошибка возвращается в случае, если не задан параметр `task` или `taskCardUrl`. Также ошибка может быть возвращена, если не определён автор, либо его почтовый адрес, или сотрудник, отклонивший задание.
 |`https://msdn.microsoft.com/ru-ru/library/system.notsupportedexception.aspx[System.PlatformNotSupportedException]` |Ошибка возвращается в случае, если задание не находится в состоянии "Отклонено".
 |===
