--- a/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService.CheckFileChanged_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService.CheckFileChanged_MT.adoc
@@ -21,8 +21,8 @@ versionedFileCard:::
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- файл был изменен, иначе -- `false`
+`true` -- файл был изменён, иначе -- `false`
 
 == Заметки
 
-Файл считается измененным, если присутствует разница (от 2 секунд) между фактической датой изменения выгруженного файла и датой его изменения в карточке. Также при проверке учитывается наличие флага `ForceChanged` (флаг принудительного оповещения о наличии изменений) у экземпляра версионного файла.
+Файл считается изменённым, если присутствует разница (от 2 секунд) между фактической датой изменения выгруженного файла и датой его изменения в карточке. Также при проверке учитывается наличие флага `ForceChanged` (флаг принудительного оповещения о наличии изменений) у экземпляра версионного файла.
