--- a/modules/BackOffice-WinForms/pages/Design/LayoutItems/ILayoutPropertyItem_IN.adoc
+++ b/modules/BackOffice-WinForms/pages/Design/LayoutItems/ILayoutPropertyItem_IN.adoc
@@ -26,7 +26,7 @@ public interface ILayoutPropertyItem
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`Commit` |Сохраняет измененное значение элемента управления.
+|`Commit` |Сохраняет изменённое значение элемента управления.
 |===
 
 == Примеры
