--- a/modules/Platform-ObjectManager-IUpdatable/pages/ISecurable_IN.adoc
+++ b/modules/Platform-ObjectManager-IUpdatable/pages/ISecurable_IN.adoc
@@ -17,7 +17,7 @@ public interface ISecurable : ISecureObject
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`Modified` |Возвращает признак того, что объект был изменен.
+|`Modified` |Возвращает признак того, что объект был изменён.
 |===
 
 == Методы
