--- a/modules/Platform-ObjectManager-Metadata/pages/CardSection_CL.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/CardSection_CL.adoc
@@ -37,5 +37,5 @@ public abstract class CardSection
 |===
 |Имя |Описание
 |`Reload` |Загружает заново свойства секции.
-|`Save` |Сохраняет измененные значения.
+|`Save` |Сохраняет изменённые значения.
 |===
