--- a/modules/Platform-ObjectManager-Metadata/pages/CardType_CL.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/CardType_CL.adoc
@@ -56,5 +56,5 @@ public abstract class CardType
 |`AccessCheck(int)` |Осуществляет проверку наличия прав доступа.
 |`GetAccessControl` |Возвращает описатель прав на объект.
 |`GetAccessControl(AccessControlSections)` |Возвращает описатель прав на объект из выбранных разделов безопасность.
-|`SetAccessControl(CardDataSecurity)` |Сохраняет измененные права доступа к объекту.
+|`SetAccessControl(CardDataSecurity)` |Сохраняет изменённые права доступа к объекту.
 |===
