--- a/modules/Platform-ObjectManager-Metadata/pages/FetchMode_EN.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/FetchMode_EN.adoc
@@ -20,7 +20,7 @@ public enum FetchMode
 [cols=",",options="header"]
 |===
 |Имя члена |Описание
-|`None` |Не определен. Значение `0x00`.
+|`None` |Не определён. Значение `0x00`.
 |`Card` |Загружаются все данные из всех секций карточки (этот режим актуален только для карточки в целом). Значение `0x01`.
 |`Section` |При первом же обращении к коллекции строк секции её данные будут загружены полностью. Значение `0x02`.
 |`SubSection` |Загружаются только данные конкретной подсекции. Значение `0x04`.
