--- a/modules/Platform-ObjectManager-Metadata/pages/Field_CL.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/Field_CL.adoc
@@ -43,5 +43,5 @@ public abstract class Field
 |===
 |Имя |Описание
 |`Reload` |Перезагружает поле.
-|`Save` |Сохраняет измененное значение поля.
+|`Save` |Сохраняет изменённое значение поля.
 |===
