--- a/modules/Platform-ObjectManager-SystemCards/pages/FolderTypes_EN.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/FolderTypes_EN.adoc
@@ -20,7 +20,7 @@ public enum FolderTypes
 [cols=",",options="header"]
 |===
 |Имя члена |Описание
-|`None` |Тип не определен. Значение `0x00`.
+|`None` |Тип не определён. Значение `0x00`.
 |`Regular` |Обычная папка. Значение `0x01`.
 |`Root` |Корневая папка. Значение `0x02`.
 |`Virtual` |Виртуальная папка. Значение `0x04`.
