--- a/modules/Platform-ObjectModel/pages/IObjectStateService_IN.adoc
+++ b/modules/Platform-ObjectModel/pages/IObjectStateService_IN.adoc
@@ -17,10 +17,10 @@ public interface IObjectStateService
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`GetModifiedObjects(ObjectBase)` |Возвращает массив измененных объектов контекста.
+|`GetModifiedObjects(ObjectBase)` |Возвращает массив изменённых объектов контекста.
 |`GetObjectState(IObjectRef)` |Возвращает статус для переданной ссылки на объект.
 |`GetObjectState(ObjectBase)` |Возвращает статус для заданного объекта.
-|`HasChangedObjects` |Получает статус наличия измененных объектов в контексте.
+|`HasChangedObjects` |Получает статус наличия изменённых объектов в контексте.
 |`IsObjectChanged(ObjectBase)` |Определяет, является ли переданный объект изменённым.
 |===
 
