--- a/modules/Platform-ObjectModel/pages/ObjectContext.GetObject_1_MT.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectContext.GetObject_1_MT.adoc
@@ -53,4 +53,4 @@ Console.WriteLine(document.Description); <.>
 <.> Получение ссылки на объект.
 <.> Установка дополнительных параметров загрузки.
 <.> Получение документа.
-<.> Вывод измененного примечания.
+<.> Вывод изменённого примечания.
