--- a/modules/Workflow/pages/Objects/DictFunctionWrapper_CL.adoc
+++ b/modules/Workflow/pages/Objects/DictFunctionWrapper_CL.adoc
@@ -25,7 +25,7 @@ public class DictFunctionWrapper : IDisposable
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`Assembly` |Задаёт или возвращает название сборки, в которой определен класс функции Workflow.
+|`Assembly` |Задаёт или возвращает название сборки, в которой определён класс функции Workflow.
 |`Class` |Задаёт или возвращает название класса, реализующего функцию Workflow.
 |`Id` |Задаёт или возвращает идентификатор функции.
 |`IsStart` |Задаёт или возвращает признак того, что функция является стартовой.
