--- a/modules/bpms/pages/scenarios-develop.adoc
+++ b/modules/bpms/pages/scenarios-develop.adoc
@@ -193,4 +193,4 @@ namespace DVScriptHost
 
 В приведенном примере метод `Execute` принимает несколько параметров, два из которых (`inputCard`, `outputCard`) будут получены их переменных процесса. Переменные процесса будут получены по схеме приведенной выше.
 
-Сам метод `Execute` будет вызван при запуске _функции_, в которой он определен. После выполнения операций, предусмотренных бизнес-логикой, метод должен вернуть результат своей работы, например, `ExecResultEnum.Done` -- "Функция успешно выполнилась". Параметр `passInfo` используется для передачи в метод контекста выполнения (см. описание типа `xref:Workflow:Objects/PassState_CL.adoc[PassState]`) _функции_. При повторном вызове _функции_ в метод будут переданы новые данные.
+Сам метод `Execute` будет вызван при запуске _функции_, в которой он определён. После выполнения операций, предусмотренных бизнес-логикой, метод должен вернуть результат своей работы, например, `ExecResultEnum.Done` -- "Функция успешно выполнилась". Параметр `passInfo` используется для передачи в метод контекста выполнения (см. описание типа `xref:Workflow:Objects/PassState_CL.adoc[PassState]`) _функции_. При повторном вызове _функции_ в метод будут переданы новые данные.
