--- a/modules/cards/pages/numerators.adoc
+++ b/modules/cards/pages/numerators.adoc
@@ -20,7 +20,7 @@
 ** Занят.
 ** Зарезервирован.
 
-Для реализации работы с нумераторами в состав платформы входит специальная системная карточка нумератора, а в менеджере объектов определен набор объектов для выполнения операций с карточкой нумератора.
+Для реализации работы с нумераторами в состав платформы входит специальная системная карточка нумератора, а в менеджере объектов определён набор объектов для выполнения операций с карточкой нумератора.
 
 == Карточка нумератора
 
