--- a/modules/samples/pages/components/properties-page.adoc
+++ b/modules/samples/pages/components/properties-page.adoc
@@ -66,7 +66,7 @@ private void PostInit()
 }
 ----
 +
-Собственно графический интерфейс реализуется обычным образом, но т.к. базовый класс компонента был изменен, аналогичное изменение должно быть сделано в XAML:
+Собственно графический интерфейс реализуется обычным образом, но т.к. базовый класс компонента был изменён, аналогичное изменение должно быть сделано в XAML:
 +
 [source,xml]
 ----
