--- a/modules/samples/pages/solution/card-lib/object-model-rows.adoc
+++ b/modules/samples/pages/solution/card-lib/object-model-rows.adoc
@@ -50,7 +50,7 @@ static NetstatSolutionCardMainInfo()
  NetstatSolutionCardMainInfo.AddressProperty = ObjectProperty.Register("Address", typeof(string), typeof(NetstatSolutionCardMainInfo));
 <.>
 ----
-<.> В метод `Register` передаем название поля (как в схеме метаданных), его тип (как определен выше) и тип самой секции (текущий класс)
+<.> В метод `Register` передаем название поля (как в схеме метаданных), его тип (как определён выше) и тип самой секции (текущий класс)
 <.> И так далее.
 
 Аналогичным образом разрабатывается объектная модель строчек секции `Journal`.
