--- a/modules/solutions/pages/cards/scheme/modes.adoc
+++ b/modules/solutions/pages/cards/scheme/modes.adoc
@@ -6,7 +6,7 @@
 * Принятие.
 * Модификация поправками.
 
-У карточки такого документа будет три соответствующих режима работы. Для каждого режима разработчик карточки сам определяет вид пользовательского интерфейса и семантику работы. Выбрать конкретный режим открытия экземпляра карточки можно либо при помощи контекстного меню {wincl}а, либо режим может быть жёстко определен в ярлыке карточки.
+У карточки такого документа будет три соответствующих режима работы. Для каждого режима разработчик карточки сам определяет вид пользовательского интерфейса и семантику работы. Выбрать конкретный режим открытия экземпляра карточки можно либо при помощи контекстного меню {wincl}а, либо режим может быть жёстко определён в ярлыке карточки.
 
 Для добавления новых режимов работы следует перейти в раздел _Modes_ и воспользоваться командой _New mode_. Далее нужно определить свойства режима.
 
