--- a/modules/views/pages/delayed-changes.adoc
+++ b/modules/views/pages/delayed-changes.adoc
@@ -86,7 +86,7 @@ objectContext.AcceptChanges(); <.>
 ----
 objectContext.SaveObject(card); <.>
 ----
-<.> Сохранение изменений в измененном объекте `card`.
+<.> Сохранение изменений в изменённом объекте `card`.
 +
 * `xref:Platform-ObjectModel:ObjectContext.RollbackChanges_MT.adoc[ObjectContext.RollbackChanges]` -- отменяет все несохранённые изменения контекста объектов:
 +
