--- a/modules/ApprovalDesigner/pages/ObjectModel/ApprovalStageMainInfo.AllowEditBeforeReconcilation_PR.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/ApprovalStageMainInfo.AllowEditBeforeReconcilation_PR.adoc
@@ -15,4 +15,4 @@ public bool AllowEditBeforeReconcilation { get; set; }
 Значение свойства::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- этап может быть изменен, иначе -- `false`
+`true` -- этап может быть изменён, иначе -- `false`
