--- a/modules/Platform-ObjectManager-CardData/pages/CardData.SetAccessControl_MT.adoc
+++ b/modules/Platform-ObjectManager-CardData/pages/CardData.SetAccessControl_MT.adoc
@@ -36,4 +36,4 @@ card.SetAccessControl(rights); <.>
 <.> Получение описателя прав карточки.
 <.> Создание нового разрешения -- совокупного права чтения.
 <.> Добавление нового разрешения к описателю прав.
-<.> Сохранение измененного описателя прав.
+<.> Сохранение изменённого описателя прав.
