--- a/modules/Platform-ObjectManager-SystemCards/pages/FolderStyles_EN.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/FolderStyles_EN.adoc
@@ -20,7 +20,7 @@ public enum FolderStyles
 [cols=",",options="header"]
 |===
 |Имя члена |Описание
-|`None` |Стиль не определен. Значение `0x00`.
+|`None` |Стиль не определён. Значение `0x00`.
 |`View` |Представление. Значение `0x01`.
 |`Card` |Список карточек. Значение `0x02`.
 |`Url` |Список URL. Значение `0x04`.
