--- a/modules/solutions/pages/cards/object-model/card-section-lines.adoc
+++ b/modules/solutions/pages/cards/object-model/card-section-lines.adoc
@@ -53,7 +53,7 @@ public class SampleCardStructSection : ObjectBase
 Для ссылочных полей тип соответствует типу сущности, на которую идет ссылка. В данном случае -- это объект сотрудник.
 +
 <.> Обязательный статический конструктор, в котором должна быть выполнена регистрация всех объявленных ранее свойств.
-<.> В метод `Register` передаем название поля (как в схеме метаданных), его тип (как определен выше) и тип самой секции (текущий класс).
+<.> В метод `Register` передаем название поля (как в схеме метаданных), его тип (как определён выше) и тип самой секции (текущий класс).
 <.> Конструктор для новой карточки.
 
 При желании, здесь можно добавить собственную бизнес-логику, а также проверку данных перед записью.
