--- a/modules/solutions/pages/cards/object-model/mapper.adoc
+++ b/modules/solutions/pages/cards/object-model/mapper.adoc
@@ -2,7 +2,7 @@
 
 Неотъемлемой частью разработки объектной модели карточки является разработка _преобразователя данных_ -- объект, в котором объясняется каким образом элементы объектной модели карточки (или секций) связаны с данными этой карточки в базе данных.
 
-_Контекст объектов_ задействует _преобразователь данных_ на этапе создания экземпляра карточки (к примеру, методом `GetObject`), а также при сохранении новых или измененных данных.
+_Контекст объектов_ задействует _преобразователь данных_ на этапе создания экземпляра карточки (к примеру, методом `GetObject`), а также при сохранении новых или изменённых данных.
 
 _Преобразователь данных_ разрабатывается для каждого созданного класса строки секции, а также для самой карточки.
 
